<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Port Knocker</string>
    <string name="app_about">This JuiceSSH plugin plugin is open source and freely available on Github. If you\'d like to contribute to it\'s development, please take a look at the github page and submit a pull request.\n\nhttps://github.com/sonelli/juicessh-portknocker</string>
    <string name="description">Description</string>
    <string name="main_description">Port knocking allows you to only expose your SSH port if a certain set of TCP or UDP packets are received.\n\nIt requires you to run a port knocking daemon on your server such as \'knockd\'.\n\nFor more information please see:\nhttp://en.wikipedia.org/wiki/Port_knocking </string>
    <string name="fork_me_on_github">Fork me on GitHub</string>
    <string name="rate_this_plugin">Rate this plugin</string>
    <string name="about">About</string>
    <string name="app_url">https://github.com/Sonelli/juicessh-portknocker</string>
    <string name="open_address">Open address</string>
    <string name="app_package">com.sonelli.portknocker</string>
    <string name="google_play_not_installed">Google Play not installed</string>
    <string name="connect">Connect</string>
    <string name="knock_sequence">Knock Sequence</string>
    <string name="destination">Destination</string>
    <string name="pick_a_connection">Pick a connection…</string>
    <string name="pause">Pause</string>
    <string name="tcp">TCP Packet</string>
    <string name="udp">UDP Packet</string>
    <string name="remove">Remove</string>
    <string name="duration">Duration</string>
    <string name="port">Port</string>
    <string name="edit">Edit</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="ms">ms</string>
    <string name="shortcut">Shortcut</string>
    <string name="homescreen_shortcut_created">Homescreen shortcut created</string>
    <string name="invalid_connection">Invalid connection</string>
    <string name="title_activity_about">About</string>

</resources>
