<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="48dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentTop="true"
        tools:context="com.sonelli.portknocker.activities.MainActivity$PlaceholderFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textAppearance="?android:listSeparatorTextViewStyle"
            android:text="@string/description" />

        <TextView
            android:layout_marginTop="@dimen/activity_item_vertical_margin"
            android:text="@string/main_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textAppearance="?android:listSeparatorTextViewStyle"
            android:text="@string/destination" />

        <Spinner
            android:id="@+id/connection_spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height"
            android:prompt="@string/pick_a_connection"
            android:layout_marginTop="@dimen/activity_item_vertical_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textAppearance="?android:listSeparatorTextViewStyle"
            android:text="@string/knock_sequence" />

        <ListView
            android:id="@+id/knock_item_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:layout_marginTop="@dimen/activity_item_vertical_margin" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        style="?android:buttonBarStyle">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:buttonBarButtonStyle"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/solid_button"
            android:text="@string/connect" />

    </LinearLayout>

</RelativeLayout>
